k8s/base/flask-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: flask-docker
  name: flask-docker
