k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-docker
spec:
  tls:
  - hosts:
    - www.bergerud.dev
    secretName: cloudflare-tls
  rules:
  - host: www.bergerud.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: flask-docker
          servicePort: http
